--- a/contact.html
+++ b/contact.html
@@ -47,9 +47,6 @@
                             <a href="news.html" class="nav-link">News</a>
                         </li>
                         <li class="nav-item">
-                            <a href="gallery.html" class="nav-link">Gallery</a>
-                        </li>
-                        <li class="nav-item">
                             <a href="donate.html"
                                 class="nav-link active">Donate</a>
                         </li>
@@ -173,20 +170,20 @@
                                         <option value>Chọn vị trí sở trường của
                                             bạn trên sân bóng</option>
                                         <option value="outside-hitter">Outside
-                                            Hitter (Chủ Sông)</option>
+                                            Hitter (Chủ Công)</option>
                                         <option value="middle-blocker">Middle
                                             Blocker(Phụ Công)</option>
+                                        <option value="opposite">Opposite
+                                            Hitter(Đối Chuyền)</option>
                                         <option value="setter">Setter(Chuyền
                                             2)</option>
                                         <option value="libero">Libero</option>
-                                        <option value="opposite">Opposite
-                                            Hitter(Đối Chuyền)</option>
                                     </select>
                                 </div>
 
                                 <!-- Birth Year -->
                                 <div class="form-group">
-                                    <label for="reg-birthyear">Năm Sinh
+                                    <label for="reg-birthyear">Năm sinh
                                         *</label>
                                     <input type="number" id="reg-birthyear"
                                         name="birthyear" required
@@ -256,7 +253,7 @@
                                     <input type="number" id="reg-spike-reach"
                                         name="spikereach" required
                                         min="200" max="380" placeholder="310">
-                                    <small class="form-help">Chiều cao từ mặt
+                                    <small class="form-help">Độ cao từ mặt
                                         đất
                                         đến đầu ngón tay khi bật nhảy để
                                         đập bóng</small>
@@ -270,7 +267,7 @@
                                     <input type="number" id="reg-block-reach"
                                         name="blockreach" required
                                         min="240" max="340" placeholder="300">
-                                    <small class="form-help">Chiều cao từ mặt
+                                    <small class="form-help">Độ cao từ mặt
                                         đất
                                         đến đầu ngón tay khi bật nhảy để
                                         chắn bóng</small>
@@ -284,6 +281,8 @@
                                         required>
                                         <option value>Chọn hệ thống đổi cầu bạn
                                             hay dùng</option>
+                                        <option value="4-2">4-2 Rotation
+                                            System (Đổi cầu 4-2)</option>
                                         <option value="5-1">5-1 Rotation
                                             System (Đổi cầu 5-1)</option>
                                         <option value="6-2">6-2 Rotation
