--- a/learn.html
+++ b/learn.html
@@ -38,7 +38,9 @@
                             <a href="players.html" class="nav-link">Players</a>
                         </li>
                         <li class="nav-item">
-                            <a href="learn.html" class="nav-link">Learn</a>
+                            <a href="learn.html"
+                                class="nav-link active">Learn</a>
+                            <!-- ✅ FIXED -->
                         </li>
                         <li class="nav-item">
                             <a href="requirements.html"
@@ -48,11 +50,7 @@
                             <a href="news.html" class="nav-link">News</a>
                         </li>
                         <li class="nav-item">
-                            <a href="gallery.html" class="nav-link">Gallery</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="donate.html"
-                                class="nav-link active">Donate</a>
+                            <a href="donate.html" class="nav-link ">Donate</a>
                         </li>
                         <li class="nav-item">
                             <a href="shop.html" class="nav-link">Shop</a>
@@ -248,7 +246,7 @@
                                             <span
                                                 class="position-number">2</span>
                                             <span
-                                                class="position-role">RS</span>
+                                                class="position-role">OP</span>
                                         </div>
                                         <div class="court-position pos-5"
                                             data-position="5"
@@ -256,7 +254,7 @@
                                             <span
                                                 class="position-number">5</span>
                                             <span
-                                                class="position-role">LB</span>
+                                                class="position-role">OH</span>
                                         </div>
                                         <div class="court-position pos-6"
                                             data-position="6"
@@ -271,7 +269,7 @@
                                             <span
                                                 class="position-number">1</span>
                                             <span
-                                                class="position-role">RB</span>
+                                                class="position-role">S</span>
                                         </div>
                                         <div class="net-line"></div>
                                     </div>
