--- a/contact.html
+++ b/contact.html
@@ -192,7 +192,8 @@
                                         (cm) *</label>
                                     <input type="number" id="reg-spike-reach"
                                         name="spikereach" required
-                                        min="200" max="380" placeholder="310">
+                                        min="200" max="380"
+                                        placeholder="Ví dụ : 310cm">
                                     <small class="form-help">Độ cao từ mặt
                                         đất
                                         đến đầu ngón tay khi bật nhảy để
@@ -206,7 +207,8 @@
                                         (cm) *</label>
                                     <input type="number" id="reg-block-reach"
                                         name="blockreach" required
-                                        min="240" max="340" placeholder="300">
+                                        min="240" max="340"
+                                        placeholder="Ví dụ : 300cm">
                                     <small class="form-help">Độ cao từ mặt
                                         đất
                                         đến đầu ngón tay khi bật nhảy để
